fix(homepage) Vertically center align photos -> text
- Vertical center align personal plan
- Vertical center align app promo

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -293,7 +293,6 @@ h2:after {
 
 #plan-personal-section img {
     margin: 0 auto;
-    max-height: 230px;
 }
 
 #app-section {
